// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agentList correctly lists multiple agents 1`] = `
.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
}

.c7:hover {
  opacity: 0.90;
}

.c9 {
  cursor: pointer;
}

.c14 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #27AE60;
  background-color: #27AE60;
}

.c13 {
  display: grid;
  grid-template-columns: [status-indicator] 20px [status-text] 1fr;
}

.c15 {
  grid-column: status-indicator;
  float: right;
  text-align: left;
}

.c16 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
  color: #27AE60;
}

.c6 {
  display: grid;
  grid-template-columns: auto 100px 175px;
  grid-column-gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  box-sizing: border-box;
  border-radius: 8px;
  border: 1px solid white;
  line-height: 30px;
  padding: 5px 20px;
  margin-top: 25px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  width: 100%;
  min-width: 0;
}

.c8 p {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8:hover {
  color: #02A3EE;
}

.c11 {
  min-width: 0;
}

.c17 {
  color: #F8F8F8;
  margin-left: 16px;
}

.c10 {
  margin-right: 10px;
  cursor: inherit;
}

.c2 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c2:hover {
  opacity: 0.90;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

.c2:disabled {
  background-color: #3E3E3E;
}

.c2:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c3 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c4 {
  margin-left: 8px;
}

.c0 {
  display: grid;
  grid-template-rows: [header] 50px [list] 1fr;
  max-width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-row: header;
}

.c5 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

@media (max-width:47.9375em) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    width: 100%;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    text-align: center;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    width: 100%;
    text-align: center;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Agents
    </h2>
    <button
      className="c2 c3"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c4"
      >
        Add new agent
      </span>
    </button>
  </div>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <a
        className="c7 c8"
        href="/agent/id"
        onClick={[Function]}
      >
        <i
          className="c9 c10 fas fa-question-circle"
        />
        Operating system unkown
        <p>
          name
        </p>
      </a>
      <p
        className="c11"
      />
      External IP address
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <div
            className="c14 c15"
            color="#27AE60"
          />
          <p
            className="c16"
            color="#27AE60"
          >
            Connected
          </p>
        </div>
        <i
          className="c9 c17 fas fa-terminal"
          onClick={[Function]}
        />
      </div>
    </li>
    <li
      className="c6"
    >
      <a
        className="c7 c8"
        href="/agent/id2"
        onClick={[Function]}
      >
        <i
          className="c9 c10 fas fa-question-circle"
        />
        Operating system unkown
        <p>
          name2
        </p>
      </a>
      <p
        className="c11"
      />
      External IP address
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <div
            className="c14 c15"
            color="#27AE60"
          />
          <p
            className="c16"
            color="#27AE60"
          >
            Connected
          </p>
        </div>
        <i
          className="c9 c17 fas fa-terminal"
          onClick={[Function]}
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`agentList handles add agent modal 1`] = `
.c7 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c2 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c2:hover {
  opacity: 0.90;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

.c2:disabled {
  background-color: #3E3E3E;
}

.c2:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c3 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c4 {
  margin-left: 8px;
}

.c6 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-color: rgba(37,37,37,0.6);
}

.c14 {
  display: grid;
  grid-template-rows: [title] 50px [description] 1fr;
  padding: 20px;
  min-height: 180px;
}

.c16 {
  grid-row: title;
  width: 80%;
  margin: 0 auto;
  text-align: center;
}

.c17 {
  grid-row: description;
  padding: 10px;
  font-size: 0.85rem;
}

.c12 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  gap: 20px;
}

.c13 {
  grid-column: column-one;
}

.c18 {
  grid-column: column-two;
  margin-right: 20px;
}

.c15 {
  width: 100%;
}

.c8 {
  background-color: #181818;
  position: fixed;
  top: 50%;
  left: 50%;
  max-width: 600px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
}

.c9 {
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  height: 100%;
  overflow-y: scroll;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c9::-webkit-scrollbar {
  display: none;
}

.c10 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c11 {
  grid-row: content;
  padding: 20px;
}

.c0 {
  display: grid;
  grid-template-rows: [header] 50px [list] 1fr;
  max-width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-row: header;
}

.c5 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c13 {
    grid-row: row-one;
  }
}

@media (max-width:47.9375em) {
  .c18 {
    grid-column: column-one;
    grid-row: row-two;
    margin-right: 0px;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    padding: 15px 0px 15px 0px;
    width: auto;
    max-width: 100%;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Agents
    </h2>
    <button
      className="c2 c3"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c4"
      >
        Add new agent
      </span>
    </button>
  </div>
  <ul
    className="c5"
  />
  <div
    className="c6"
    onClick={[Function]}
  >
    <div
      className="c7 c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
        >
          Add new agent
        </h2>
        <div
          className="c11"
        >
          <div
            className="c12"
          >
            <div
              className="c13"
            >
              <button
                className="c2 c3 c14 c15"
                onClick={[Function]}
              >
                <h3
                  className="c16"
                >
                  Directly on target machine.
                </h3>
                <p
                  className="c17"
                >
                  You have the correct permissions to download the binary directly on the target machine.
                </p>
              </button>
            </div>
            <div
              className="c18"
            >
              <button
                className="c2 c3 c14 c15"
                onClick={[Function]}
              >
                <h3
                  className="c16"
                >
                  Manual upload
                </h3>
                <p
                  className="c17"
                >
                  You download and upload the binary yourself.
                </p>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`agentList handles add agent modal 2`] = `
.c2 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c2:hover {
  opacity: 0.90;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

.c2:disabled {
  background-color: #3E3E3E;
}

.c2:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c3 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c4 {
  margin-left: 8px;
}

.c0 {
  display: grid;
  grid-template-rows: [header] 50px [list] 1fr;
  max-width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-row: header;
}

.c5 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Agents
    </h2>
    <button
      className="c2 c3"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c4"
      >
        Add new agent
      </span>
    </button>
  </div>
  <ul
    className="c5"
  />
</div>
`;

exports[`agentList renders correctly 1`] = `
.c2 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c2:hover {
  opacity: 0.90;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

.c2:disabled {
  background-color: #3E3E3E;
}

.c2:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c3 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c4 {
  margin-left: 8px;
}

.c0 {
  display: grid;
  grid-template-rows: [header] 50px [list] 1fr;
  max-width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-row: header;
}

.c5 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Agents
    </h2>
    <button
      className="c2 c3"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c4"
      >
        Add new agent
      </span>
    </button>
  </div>
  <ul
    className="c5"
  />
</div>
`;
